# Intel-4th-Project

./: .gitignore  README.md
comm_pkg/: CMakeLists.txt  mesh_off.sh  mesh_up.sh  receiver.cpp  sender.cpp
comm_pkg/receiver_qt/: .gitignore  AiotClient.pro  Images.qrc  Makefile  command.sh  keyboard.cpp  ledkeydev.cpp  ledkeydev.h  main.cpp  main.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  mesh_rx_thread.cpp  mesh_rx_thread.h  receiver  receiver.pro  recv_command.sh  socketclient.h  tab1devcontrol.cpp  tab1devcontrol.h  tab1devcontrol.ui  tab2socketclient.cpp  tab2socketclient.h  tab2socketclient.ui  tab3controlpannel.cpp  tab3controlpannel.h  tab3controlpannel.ui  tab4sensorchart.cpp  tab4sensorchart.h  tab4sensorchart.ui  tab5sensordatabase.cpp  tab5sensordatabase.h  tab5sensordatabase.ui  tab6webcamera.cpp  tab6webcamera.h  tab6webcamera.ui  tab7camviewer.cpp  tab7camviewer.h  tab7camviewer.h.bak  (+4 more)
comm_pkg/receiver_qt/.qtcreator/: AiotClient.pro.user.c8a4526
comm_pkg/receiver_qt/Images/: .qrc
robot_Qt/: send_map.py
robot_Qt/my_robot_gui/: CMakeLists.txt  package.xml
robot_Qt/my_robot_gui/include/my_robot_gui/: ros_worker.h
robot_Qt/my_robot_gui/src/: main_window.cpp  ros_worker.cpp
ros2_turtlebot_createdpkg/: README.md
ros2_turtlebot_createdpkg/relay_bot_pkg/: .gitignore  package.xml  setup.cfg  setup.py
ros2_turtlebot_createdpkg/relay_bot_pkg/launch/: relay_sim.launch.py  relay_system.launch.py  relay_system_all.launch.py
ros2_turtlebot_createdpkg/relay_bot_pkg/relay_bot_pkg/: mesh_rssi_publisher.py  mesh_tq_publisher.py  reactive_node.py  (+3 more)
(+3 files in other folders)
